--- a/packages/mgt/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt/src/components/mgt-login/mgt-login.scss
@@ -8,8 +8,7 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
 
-:host,
-mgt-login {
+:host {
   --font-size: #{$ms-font-size-m};
   --font-weight: #{$ms-font-weight-semibold};
   --width: '100%';
@@ -27,14 +26,12 @@ mgt-login {
   --popup-color: #{$ms-color-neutralPrimary};
 }
 
-:host .root,
-mgt-login .root {
+:host .root {
   position: relative;
   display: inline-block;
 }
 
-:host .login-button,
-mgt-login .login-button {
+:host .login-button {
   display: flex;
   align-items: center;
   font-family: var(--default-font-family);
@@ -70,15 +67,13 @@ mgt-login .login-button {
   }
 }
 
-:host .login-icon,
-mgt-login .login-icon {
+:host .login-icon {
   & + span {
     margin-left: 6px;
   }
 }
 
-:host .popup,
-mgt-login .popup {
+:host .popup {
   font-family: var(--default-font-family);
   background: var(--popup-content-background-color);
   min-width: 240px;
@@ -87,22 +82,19 @@ mgt-login .popup {
   --color: var(--popup-color);
 }
 
-:host .popup-content,
-mgt-login .popup-content {
+:host .popup-content {
   display: flex;
   flex-direction: column;
   padding: var(--popup-padding);
 }
 
-:host .popup-commands ul,
-mgt-login .popup-commands ul {
+:host .popup-commands ul {
   list-style-type: none;
   margin: var(--popup-command-margin);
   padding: 0;
 }
 
-:host .popup-command,
-mgt-login .popup-command {
+:host .popup-command {
   font-family: var(--default-font-family);
   font-size: var(--popup-command-font-size);
   font-weight: var(--font-weight);
