--- a/packages/mgt/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
+++ b/packages/mgt/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
@@ -8,13 +8,11 @@
 @import '../../../styles/shared-styles.scss';
 @import '../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
-:host,
-mgt-dot-options {
+:host {
   font-family: 'Segoe UI';
 }
 
-:host .DotIcon,
-mgt-dot-options .DotIcon {
+:host .DotIcon {
   display: inline-block;
   font-family: 'FabricMDL2Icons';
   min-width: 40px;
@@ -23,8 +21,7 @@ mgt-dot-options .DotIcon {
   line-height: 30px;
 }
 
-:host .Menu,
-mgt-dot-options .Menu {
+:host .Menu {
   position: absolute;
   box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 40px 5px;
   background: #ffffff;
@@ -35,29 +32,24 @@ mgt-dot-options .Menu {
   transform: translateX(-50px);
 }
 
-:host .DotMenu.Open .Menu,
-mgt-dot-options .DotMenu.Open .Menu {
+:host .DotMenu.Open .Menu {
   display: block;
 }
 
-:host .DotMenu .DotItem,
-mgt-dot-options .DotMenu .DotItem {
+:host .DotMenu .DotItem {
   direction: ltr;
   text-align: left;
   padding: 10px 10px 8px 10px;
 }
 
-:host .DotMenu .DotItem:hover,
-mgt-dot-options .DotMenu .DotItem:hover {
+:host .DotMenu .DotItem:hover {
   background: #c0c0c0;
 }
 
-:host .DotMenu .DotItem:active,
-mgt-dot-options .DotMenu .DotItem:active {
+:host .DotMenu .DotItem:active {
   background: #d8d8d8;
 }
 
-:host .DotMenu .DotItemName,
-mgt-dot-options .DotMenu .DotItemName {
+:host .DotMenu .DotItemName {
   direction: rtl;
 }
