Updated sample with latest graph sample

--- a/samples/proxy-provider-asp-net-core/Views/Shared/_Layout.cshtml
+++ b/samples/proxy-provider-asp-net-core/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graph ASP.NET Core Sample</title>
+    <title>MGT ASP.NET Core Sample</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -53,11 +53,13 @@
         </div>
     </nav>
 
+    <partial name="_CookieConsentPartial" />
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Microsoft</p>
+            <p>&copy; 2020 - Microsoft</p>
         </footer>
     </div>
 
