--- a/packages/mgt/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
+++ b/packages/mgt/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
@@ -6,7 +6,7 @@
  */
 
 @import '../../../styles/shared-styles.scss';
-@import '../../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import '../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
 :host,
 mgt-dot-options {
