--- a/packages/mgt/src/components/mgt-people/mgt-people.scss
+++ b/packages/mgt/src/components/mgt-people/mgt-people.scss
@@ -5,7 +5,7 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
 
 $list-margin: var(--list-margin, 8px 4px 8px 8px);
