--- a/packages/mgt/src/styles/shared-styles.scss
+++ b/packages/mgt/src/styles/shared-styles.scss
@@ -47,3 +47,26 @@
 .ms-Icon--OutlookLogoInverse::before {
   content: '\\\EB6D';
 }
+
+/* ---------------Common color variables--------------- */
+$black: #000000;
+$white: #ffffff;
+$accent-main--light: #0078d4;
+$accent-shade10--light: #106ebe;
+$accent-shade20--light: #005a9e;
+$accent-main--dark: #2899f5;
+$accent-tint10--dark: #0078d4;
+$accent-tint20--dark: #004c87;
+$shade20: #f3f2f1;
+$shade30: #edebe9;
+$shade40: #e1dfdd;
+$shade60: #c8c6c4;
+$shade90: #a19f9d;
+$shade100: #979593;
+$shade120: #797775;
+$shade130: #605e5c;
+$shade140: #4f4f4f;
+$shade150: #404040;
+$shade160: #323130;
+$shade180: #252423;
+$shade400: #919191;
