Added loading state and styles to person card

--- a/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
+++ b/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
@@ -5,8 +5,7 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../../../styles/shared-styles.scss';
-@import '../../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import '../base-person-card-section.scss';
 
 :host {
   position: relative;
@@ -16,11 +15,6 @@
 
     &.compact {
       padding: 0;
-    }
-
-    .no-data,
-    .loading {
-      padding: 0 20px;
     }
 
     .title {
