--- a/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
+++ b/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
@@ -5,19 +5,13 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../../../styles/shared-styles.scss';
-@import '../../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import '../base-person-card-section.scss';
 
 :host {
   position: relative;
 
   .root {
     padding: 20px 0;
-
-    .no-data,
-    .loading {
-      padding: 0 20px;
-    }
 
     .title {
       font-size: 14px;
